*scrollbar height bugfix

--- a/src/core/component/scrollbar/scrollbar.scss
+++ b/src/core/component/scrollbar/scrollbar.scss
@@ -6,6 +6,7 @@
 ::-webkit-scrollbar
 {
   width: 8px;
+  height: 8px;
   background: transparent;
 }
 
